fix: changes after review

--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
@@ -74,7 +74,7 @@ This property is equivalent to [extraHeight](https://github.com/APSL/react-nativ
 :::
 
 :::tip
-If you specified `snapOffsets` to your `ScrollView` then `KeyboardAwareScrollView` will automatically respect to this values and actual `bottomOffset` may be bigger (but focused input will be always above the keyboard anyway).
+If you specified `snapToOffsets` to your `ScrollView` then `KeyboardAwareScrollView` will automatically respect to these values and an actual `bottomOffset` may be bigger (but focused input will be always above the keyboard anyway).
 :::
 
 ### `disableScrollOnKeyboardHide`
