--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
@@ -179,6 +179,7 @@ export default List;
 To seamlessly work with [@gorhom/bottom-sheet](https://github.com/gorhom/react-native-bottom-sheet) you will need to wrap `KeyboardAwareScrollView` in some HOCs provided by `@gorhom/bottom-sheet`.
 
 ```tsx title="BottomSheetKeyboardAwareScrollView.tsx"
+import { memo } from "react";
 import {
   KeyboardAwareScrollView,
   KeyboardAwareScrollViewProps,
@@ -205,7 +206,7 @@ BottomSheetKeyboardAwareScrollView.displayName =
   "BottomSheetKeyboardAwareScrollView";
 
 export default BottomSheetKeyboardAwareScrollView as (
-  props: BottomSheetScrollViewProps,
+  props: BottomSheetScrollViewProps & KeyboardAwareScrollViewProps,
 ) => ReturnType<typeof BottomSheetKeyboardAwareScrollView>;
 ```
 
